--- a/src/assets/layouts/layout/css/custom.scss
+++ b/src/assets/layouts/layout/css/custom.scss
@@ -16,6 +16,8 @@
 @import "icons.scss";
 @import "text-font.scss";
 @import "validation.scss";
+/* ------------------------- */
+@import "scout24.scss";
 
 /* -------------------------------------
  * GENERAL
