--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 
 
             <li class="top-nav-item active-page page-tabs" id="feedIndicator" *ngIf="store.showMarketOptions">
-              <a (click)="getMarketOption('feeds')"  data-close-others="true">
+              <a (click)="getMarketOption('feed')"  data-close-others="true">
                 <span> Feed </span>
               </a>
             </li>
