--- a/src/app/getcontent/getcontent.component.html
+++ b/src/app/getcontent/getcontent.component.html
@@ -3,12 +3,12 @@
   <!-- BEGIN PAGE HEAD-->
   <div class="page-head">
     <!-- BEGIN PAGE TITLE -->
-    <div class="page-title">
-      <h1>Market: {{store.marketName}}
-        <small>Description: {{store.marketDescription}}</small>
-        <!--      <small>Adjust the feed to customize and prioritize the games to be shown in the ad</small>-->
-      </h1>
-    </div>
+    <!--    <div class="page-title">
+          <h1>Market: {{store.marketName}}
+            <small>Description: {{store.marketDescription}}</small>
+            &lt;!&ndash;      <small>Adjust the feed to customize and prioritize the games to be shown in the ad</small>&ndash;&gt;
+          </h1>
+        </div>-->
     <!-- END PAGE TITLE -->
 
     <div class="page-btn-container">  <!--*ngIf="!storeservice.createdAdDiv"-->
@@ -20,52 +20,74 @@
 
 
   <!-- BEGIN SEARCH FIELD -->
-  <div>
-    <input type="text" [(ngModel)]="objectId"/>
-    <button (click)="getData();">Get data</button>
+  <div id="sc-search-field">
+    <input type="text" [(ngModel)]="objectId" placeholder="Object ID" />
+    <i class="fa fa-search" aria-hidden="true"></i>
+    <button (click)="getData();">Find</button>
   </div>
   <!-- END SEARCH FIELD -->
 
 
-  <!-- BEGIN SEARCH RESULT AREA -->
-  <div class="sc-search-result-area">
-    <div class="sc-search-result" *ngIf="showData">
-      <div><img src="{{objectData.titlepicture.href}}"></div>
-      <div class="sc-search-result-metadata">
-        <label for="cityname">City name:</label>
-        <span id="cityname">{{objectData.address.geoHierarchy.city.name}}</span>
-        <label for="quartername">Quarter name:</label>
-        <span id="quartername">{{objectData.address.geoHierarchy.quarter.name}}</span>
-        <label for="regionname">Region name:</label>
-        <span id="regionname">{{objectData.address.geoHierarchy.region.name}}</span>
-        <label for="postcode">Post code:</label>
-        <span id="postcode">{{objectData.address.postcode}}</span>
-        <label for="price">Price:</label>
-        <span id="price">{{objectData.price.value}}</span>
-        <label for="currency">Currency</label>
-        <span id="currency">{{objectData.price.currency}}</span>
-        <label for="livingspace">Livingspace</label>
-        <span id="livingspace">{{objectData.livingspace}}</span>
-      </div>
-      <button (click)="selectObject();">Select</button>
-    </div>
-  </div>
-  <!-- END SEARCH RESULT AREA -->
 
-<!-- START ADD LOGO-->
+
+  <!-- START ADD LOGO-->
   <div>
-    <button (click)="addLogo();">Add logo</button>
-    <div *ngIf="showLogoDiv">
+    <!--    <button (click)="addLogo();">Add logo</button>
+        <div *ngIf="showLogoDiv">-->
 
-      <input id="imgInput" style="display: none" (change)="readImage();" type="file"  name="picture">
-      <div>
-        <img id="imgImage" src="" (click)="triggerFileUpload();" dragover="allowDrop($event);" (drop)="dropImage($event);" style="width: 100px; height:100px;">
+
+    <div class="sc-upload-area">
+
+
+      <!-- BEGIN SEARCH RESULT AREA -->
+      <div class="sc-search-result-area" *ngIf="showData">
+        <div class="sc-search-result">
+          <div><img class="sc-search-result-thumbnail" src="{{objectData.titlepicture.href}}"></div>
+          <div class="sc-search-result-metadata">
+
+            <h1>Quarter, Region, City!</h1>
+
+             <label for="cityname">City name:</label>
+             <span id="cityname">{{objectData.address.geoHierarchy.city.name}}</span>
+             <label for="quartername">Quarter name:</label>
+             <span id="quartername">{{objectData.address.geoHierarchy.quarter.name}}</span>
+             <label for="regionname">Region name:</label>
+             <span id="regionname">{{objectData.address.geoHierarchy.region.name}}</span>
+             <label for="postcode">Post code:</label>
+             <span id="postcode">{{objectData.address.postcode}}</span>
+             <label for="price">Price:</label>
+             <span id="price">{{objectData.price.value}}</span>
+             <label for="currency">Currency</label>
+             <span id="currency">{{objectData.price.currency}}</span>
+             <label for="livingspace">Livingspace</label>
+             <span id="livingspace">{{objectData.livingspace}}</span>
+          </div>
+          <button (click)="cancelObject();">Cancel</button>
+          <button (click)="selectObject();">Select</button>
+        </div>
       </div>
+      <!-- END SEARCH RESULT AREA -->
+      <div style="width: 770px; height: 300px;" (click)="triggerFileUpload();" dragover="allowDrop($event);" (drop)="dropImage($event);">
+        <div id="imgUploadDiv" style="display: none">
+         <img src="" id="imgImage" src=""  style="width: 100px; height:100px;">
+          <span>Add URL:</span>
+          <input type="text" [(ngModel)]="logoURL" />
+          <button (click)="selectLogo();">Select</button>
+          <button (click)="cancelLogo();">Cancel</button>
+        </div>
+      </div>
+      <input id="imgInput" style="display: none" (change)="readImage();" type="file"  name="picture" />
 
-      <span>Add URL:</span>
-      <input type="text" [(ngModel)]="logoURL" />
-      <button (click)="selectLogo();">Select</button>
+
+
+
+
+
     </div>
+
+
+
+    <!--    </div>-->
   </div>
   <!-- END ADD LOGO-->
 
@@ -84,12 +106,15 @@
             <a onclick="closePreviewSidebar()" class="collapse-icon-black"></a>
             <a onclick="collapsePreviewSidebar()" class="fullscreen-collapse-icon color-black"></a>
           </div>
-          <div class="options-wrapper">
-            <div class="options">
-              <button class="btn-inverted black" (click)="savePoints()">Save Priority</button>
-            </div>
-          </div>
       -->
+      <div class="options-wrapper">
+        <div class="options-inner">
+          <div class="options">
+            <button class="btn-inverted black" type="submit" (click)="saveObjects()">Save Priority</button>
+          </div>
+        </div>
+      </div>
+
     </div>
     <!--END PREVIEW SIDEBAR HEAD-->
 
@@ -102,23 +127,23 @@
         <div class="sc-selected-object" *ngFor="let object of selectedDataContent; let i = index">
 
           <div *ngIf="object.type === undefined">
-          <div class="sc-object-thumbnail-wrapper">
-            <img class="sc-object-thumbnail" src="{{object.titlepicture.href}}">
-          </div>
+            <div class="sc-selected-object-thumbnail-wrapper">
+              <img class="sc-selected-object-thumbnail" src="{{object.titlepicture.href}}">
+            </div>
 
-          <div class="sc-selected-object-metadata">
+            <div class="sc-selected-object-metadata">
 
-            <label>
-              {{object.address.geoHierarchy.city.name}}
-              {{object.address.geoHierarchy.quarter.name}}
-              {{object.address.geoHierarchy.region.name}}
-            </label>
-            <label>
-              <span id="price">{{object.price.value}}</span>
-              <span id="currency">{{object.price.currency}}</span>
-            </label>
-            <button (click)="removeObject(i)">remove</button>
-          </div>
+              <label>
+                {{object.address.geoHierarchy.city.name}}
+                {{object.address.geoHierarchy.quarter.name}}
+                {{object.address.geoHierarchy.region.name}}
+              </label>
+              <label>
+                <span id="price">{{object.price.value}}</span>
+                <span id="currency">{{object.price.currency}}</span>
+              </label>
+              <button (click)="removeObject(i)">remove</button>
+            </div>
           </div>
 
 
@@ -139,4 +164,8 @@
   </div>
   <!--END PREVIEW SIDEBAR-->
 
+</div>
+<div *ngIf="showLoadingIcon">
+  <img style="position: fixed; top: 50%; left: 60%; transform: translate(-50%, -50%);"
+       src="./img/ripple-load.gif"/>
 </div>
