--- a/src/assets/layouts/layout/css/custom.css
+++ b/src/assets/layouts/layout/css/custom.css
@@ -3305,7 +3305,15 @@ p {
  * PREVIEW TOOL
  --------------- */
 .sc-search-result-area {
-  background-color: rebeccapurple; }
+  background-color: azure;
+  height: 100%;
+  width: 100%; }
+
+.sc-search-result-metadata {
+  float: left;
+  display: inline-block;
+  padding: 40px;
+  width: calc(100% - 300px); }
 
 .sc-selected-object-metadata {
   padding: 15px 25px; }
@@ -3340,22 +3348,83 @@ p {
   padding: 20px 50px 0px 50px;
   box-shadow: rgba(0, 0, 0, 0.08431) 0px 4px 7px 0px;
   transition: All 0.5s cubic-bezier(0.06, 1.35, 0.6, 1.05); }
+  .sc-selected-objects-sidebar .options-wrapper {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #fff;
+    margin-left: -50px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    z-index: 2; }
+  .sc-selected-objects-sidebar .options-inner {
+    width: 292px;
+    height: 10px;
+    padding-top: 20px;
+    border-top: 1px solid #e3e3e3;
+    margin-left: 30px; }
 
 .sc-selected-objects-inner {
   overflow: auto;
-  height: calc(100% - 56px); }
+  height: calc(100% - 128px); }
 
-.sc-object-thumbnail {
+.sc-selected-object-thumbnail {
   display: block;
   width: 100%;
   height: 125px;
   object-fit: cover; }
 
-.sc-object-thumbnail-wrapper {
+.sc-selected-object-thumbnail-wrapper {
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
   overflow: hidden; }
 
+#sc-search-field {
+  position: relative;
+  width: 770px; }
+  #sc-search-field input[type=text] {
+    height: 65px;
+    width: 80%;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    outline: none;
+    border: 1px solid #DFDFDF;
+    padding: 25px 60px;
+    font-size: 16px; }
+  #sc-search-field i.fa-search {
+    position: absolute;
+    left: 30px;
+    top: 25px; }
+  #sc-search-field button {
+    height: 65px;
+    width: 20%;
+    display: inline-block;
+    float: right;
+    background-color: #2196F3;
+    border: none;
+    color: #fff;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px; }
+
+.sc-search-result-area .sc-search-result-thumbnail {
+  width: 300px;
+  height: 300px;
+  display: block;
+  object-fit: cover;
+  float: left; }
+
+.sc-upload-area {
+  margin-top: 15px;
+  width: 770px;
+  height: 300px;
+  background-color: #D9DDE6;
+  border-radius: 4px;
+  overflow: hidden; }
+
+/* ----------------
+ * SEARCH FIELD
+ --------------- */
 /* ----------------
  * RIGHT SIDEBAR
  * SCROLLBAR
