--- a/src/assets/layouts/layout/css/scout24.scss
+++ b/src/assets/layouts/layout/css/scout24.scss
@@ -1,7 +1,9 @@
 @import "variables.scss";
 
 .sc-search-result-area {
-  background-color: rebeccapurple;
+  background-color: azure;
+  height: 100%;
+  width: 100%;
 }
 
 .sc-search-result {
@@ -9,7 +11,10 @@
 }
 
 .sc-search-result-metadata {
-  
+  float: left;
+  display: inline-block;
+  padding: 40px;
+  width: calc(100% - 300px);
 }
 
 .sc-selected-object-metadata {
@@ -52,25 +57,107 @@
   padding: 20px 50px 0px 50px;
   box-shadow: rgba(0, 0, 0, 0.08431) 0px 4px 7px 0px;
   transition: All 0.5s cubic-bezier(0.06, 1.35, 0.6, 1.05);
+  
+  .options-wrapper {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #fff;
+    margin-left: -50px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    z-index: 2;
+  }
+  
+  .options-inner {
+    width: 292px;
+    height: 10px;
+    padding-top: 20px;
+    border-top: 1px solid $main-border-color;
+    margin-left: 30px;
+  }
 }
 
 .sc-selected-objects-inner {
   overflow: auto;
-  height: calc(100% - 56px);
+  height: calc(100% - 128px);
 }
 
-.sc-object-thumbnail {
+.sc-selected-object-thumbnail {
   display: block;
   width: 100%;
   height: 125px;
   object-fit: cover;
 }
 
-.sc-object-thumbnail-wrapper {
+.sc-selected-object-thumbnail-wrapper {
   border-top-left-radius: $rounded-corners;
   border-top-right-radius: $rounded-corners;
   overflow: hidden;
 }
+
+#sc-search-field {
+  position:relative;
+  width: 770px;
+  
+  input[type=text] {
+    height: 65px;
+    width: 80%;
+    border-top-left-radius: $rounded-corners;
+    border-bottom-left-radius: $rounded-corners;
+    outline: none;
+    border: 1px solid #DFDFDF;
+    padding: 25px 60px;
+    font-size: $fs-label;
+  }
+  
+  i.fa-search {
+    position: absolute;
+    left: 30px;
+    top: 25px;
+  }
+  
+  button {
+    height: 65px;
+    width: 20%;
+    display: inline-block;
+    float: right;
+    background-color: #2196F3;
+    border: none;
+    color: #fff;
+    border-top-right-radius: $rounded-corners;
+    border-bottom-right-radius: $rounded-corners;
+  }
+}
+
+.sc-search-result-area {
+  
+  .sc-search-result-thumbnail {
+    width: 300px;
+    height: 300px;
+    display: block;
+    object-fit: cover;
+    float: left;
+  }
+}
+
+
+.sc-upload-area {
+  margin-top: 15px;
+  width: 770px;
+  height: 300px;
+  background-color: #D9DDE6;
+  border-radius: $rounded-corners;
+  overflow: hidden;
+}
+
+
+/* ----------------
+ * SEARCH FIELD
+ --------------- */
+
+
 
 
 /* ----------------
